[gd_scene load_steps=2 format=3 uid="uid://dh7ok2x233c8g"]

[ext_resource type="Script" path="res://menu/controls_options.gd" id="2_35l6j"]

[node name="ControlsOptions" type="ScrollContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_35l6j")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ResetInputButton" type="Button" parent="MarginContainer/VBoxContainer" groups=["Button"]]
layout_mode = 2
text = "Reset Input"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ResetInputButton" to="." method="_on_reset_input_button_pressed"]
